--- a/sass/style/_variables.scss
+++ b/sass/style/_variables.scss
@@ -2,19 +2,23 @@
 $ff-main: 'League Spartan', sans-serif;
 
 // font size//
-$fs-main: 2.3rem;
-$fs-sub: 1.3rem;
+$fs-main: 5rem;
+$fs-sub: 1.7rem;
 
 // font weight//
 $fw-500: 500;
 $fw-700: 700;
 $fw-900: 900;
+
 // color //
 $color-accent: hsl(300, 43%, 22%);
 $color-main: hsl(333, 80%, 67%);
 $color-sub: hsl(303, 10%, 53%);
 $color-bg: hsl(0, 0%, 100%);
 $color-bg-card: hsl(300, 24%, 96%);
+
+// margin //
+$m-5: 5rem;
 
 
 
