--- a/sass/style/_component.scss
+++ b/sass/style/_component.scss
@@ -21,3 +21,28 @@
     margin-top: a.$m-5;
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .mt {
+    margin-top: 0;
+    &__2 {
+      margin-top: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 765px) {
+  .grid {
+    grid-template-columns: 1fr;
+    &__column2 {
+      grid-column: 1;
+    }
+  }
+  .ml {
+    margin-left: 0;
+    &__2 {
+      margin-left: 0;
+    }
+  }
+}
+
