--- a/sass/style/_home.scss
+++ b/sass/style/_home.scss
@@ -34,7 +34,7 @@
     display: flex;
     align-items: center;
     gap: 1.5rem;
-    padding: 0 3rem;
+    padding: 3rem;
     border-radius: 1rem;
     max-width: 41rem;
   }
@@ -52,7 +52,6 @@
 
 .testimonial {
   display: flex;
-  position: relative;
   gap: 3rem;
   &__box {
     display: flex;
@@ -83,6 +82,28 @@
     font-size: a.$fs-sub;
     font-weight: a.$fw-500;
     line-height: 1.5;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .testimonial {
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 765px) {
+  .stats {
+    text-align: center;
+    max-width: 100%;
+  }
+  .rating {
+    justify-content: center;
+  }
+  .testimonial {
+    &__box {
+      padding: 2rem;
+      max-height: 28rem;
+    }
   }
 }
 
